<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Reservator</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="book_now">Book now</string>
    <string name="dateLabelFormat">EEE, d/MM</string>
    <string name="weekLabelFormat">\'Week\' w</string>
    <string name="seeAllRooms">All rooms</string>
    <string name="toMain">Main screen</string>
    <string name="default_room_name">Name of the default room</string>
    <string name="removeUserData">Remove login info and reset settings</string>
    <string name="lobbyRoomName">Lobby</string>
    <string name="calendarError">Google Calendar error</string>
    <string name="noCalendarsError">No meeting room calendars found. Please ensure that a Google Account has been configured on this device and that Google Calendar has been set to sync the meeting room calendars.</string>
    <string name="close">Close</string>
    <string name="used_google_account">Used Google Account</string>
    <string name="shown_rooms">Visible rooms</string>
    <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
    <string name="touchToReserve">Tap to see schedule</string>
    <string name="bookNow">Use room now</string>
    <string name="disconnectedWarning">Disconnected!</string>
    <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin, Munich, Stockholm and London. More information at: www.futurice.com.\n\nThis application is published under the BSD license. You can find the source code at: http://github.com/futurice/meeting-room-tablet</string>
    <string name="aboutTitle">About</string>
    <string name="addressBookOptionLabel">Require address book contacts for reserving</string>
    <string name="googleAccountType">com.google</string>
    <string name="selectGoogleAccount">Select a Calendar Account</string>
    <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
    <string name="addressBookHelpText">If this option is enabled, reserving with the tablet requires entering a valid name that is synced to the accounts address book contacts.</string>
    <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
    <string name="defaultTitleForReservation">Reserved</string>
    <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
    <string name="goToAccountSettings">Go to account settings</string>
    <string name="defaultRoomSelectionTitle">Select default room</string>
    <string name="calendarResourcesHelpText">If this option is enabled, non-resource calendars will be shown.</string>
    <string name="permission_request_title">Permission Request</string>
    <string name="permission_request_reason">We need your permission to access your contacts and calendar in order for the app to work.</string>
    <string name="PREFERENCES_NAME">ReservatorPreferences</string>
    <string name="PREFERENCES_ROOM_NAME">roomName</string>
    <string name="room_name">Room Name</string>
    <string name="cancel_reservation">Peruuta varaus\nAvbryt reservering\nCancel reservation</string>
    <string name="hint_your_name">Your name</string>
    <string name="button_reserve">Varaa • Reservera • Reserve</string>
    <string name="message_permissions_are_required">Reservator Needs Permissions to Work!</string>
    <string name="room_capacity">for %1$d</string>
    <string name="end_plus_content_description">plus time</string>
    <string name="minus_time_content_description">minus time</string>
    <string name="only_use_resource_calendars">Only use resource calendars</string>
    <string name="default_room_icon_content_description">default room icon</string>
    <string name="status_free">VAPAA • LEDIGT • FREE</string>
    <string name="free_for_the_day">Päivän loppuun | Hela dagen | For the day</string>
    <string name="free_for_specific_amount">seuraava varaus | nästa reservering | next reservation</string>
    <string name="status_reserved">VARATTU • RESERVERAT • RESERVED</string>
    <string name="free_at">Vapautuu | Ledigt från | Free at</string>
    <string name="meeting_description">Syötä kuvaus | Ange beskrivning | Enter description</string>
    <string name="quick_booking">Pikavaraus | Snabbreservering | Use now:</string>
    <string name="reservation_remaining">VARAUSTA JÄLJELLÄ | RESERVERING KVAR | RESERVATION REMAINING:</string>
    <string name="default_reservation_description">Varaus | Reservering | Reservation</string>
    <string name="approveChange">Vahvista muutos\nKonfirmera förändringen\nConfirm change</string>
    <string name="cancelChange">Muutokset tallennetaan | Ändringarna sparas | Saving changes\n\nPeruuta | Avbryt | Cancel</string>
    <string name="modifyPrompt">Muokkaa varausta liukusäätimestä • Ändra reserveringen med skjutreglaget • Modify with slider</string>
    <string name="device_admin">Device admin</string>
    <string name="device_admin_description">Device admin for turning on the kiosk mode</string>
    <string name="default_duration">Default duration</string>
    <string name="maximum_duration">Maximum duration</string>
    <string name="app_info_title">UbiKampus Reservator information</string>
    <string name="general_github_link">https://github.com/ubikampus/reservator</string>
    <string name="app_desc_text">UbiKampus Reservator is an Android application for displaying and reserving meeting rooms, developed by Futurice and the University of Helsinki.</string>
    <string name="give_feedback_contribute_text">Give us feedback / contribute to the project: </string>
    <string name="button_info_ok">OK</string>
    <string name="version">Version %1$s</string>
</resources>
