<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_window"
    android:background="@color/InfoWindowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/appTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_info_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/InfoWindowText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_desc_text"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/InfoWindowText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitleText" />

    <TextView
        android:id="@+id/giveFeedbackContribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/give_feedback_contribute_text"
        android:textAlignment="center"
        android:textColor="@color/InfoWindowText"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="126dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/qr"
        app:layout_constraintTop_toBottomOf="@id/giveFeedbackContribute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/githubLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/general_github_link"
        android:textAlignment="center"
        android:textColor="@color/InfoWindowText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/infoOkButton"
        android:layout_width="160dp"
        android:layout_height="84dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_info_ok"
        android:background="@drawable/reserve_button"
        android:textColor="@color/TrafficLightFree"

        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@+id/githubLink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/infoAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/InfoWindowText"
        android:textSize="16sp"
        android:text="@string/version"/>

</android.support.constraint.ConstraintLayout>