<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dip"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/bookNowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary70Alpha"
        android:text="@string/quick_booking"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/TextViewBarDuration" />


    <TextView
        android:id="@+id/TextViewBarDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="#F8F8F8"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        ></TextView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:max="90"
        android:progress="30"
        android:thumbOffset="-0dp"
        android:progressDrawable="@drawable/seekbar_free"
        android:thumb="@drawable/seekthumb_free"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        >
    </SeekBar>


    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/reserve_text_box"
        android:ems="10"
        android:paddingLeft="10dp"
        android:textSize="22sp"
        android:hint="@string/meeting_description"
        android:textColorHint="@color/whiteA"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/pureWhite"
        android:textAlignment="gravity"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reserveButton"
        ></EditText>

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="391dp"
        android:layout_height="72dp"
        android:layout_alignTop="@+id/nameInput"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:layout_toEndOf="@+id/nameInput"
        android:background="@drawable/reserve_button"
        android:text="@string/button_reserve"
        android:textColor="@color/TrafficLightFree"
        android:textSize="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="1.0"></Button>


</android.support.constraint.ConstraintLayout>


